# DistDir

./: .gitignore  .gitmodules  1__license_8dox.html  2__rationale_8dox.html  3__installation_8dox.html  4__start_8dox.html  5__advance_8dox.html  6__bindings_8dox.html  7__limit_8dox.html  8__wip_8dox.html  CMakeLists.txt  LICENSE  README.md  advance.html  allocate__cpu__tests_8c.html  annotated.html  assign__idxlist__elements__to__buckets__tests_8c.html  backend_8h.html  backend_8h_source.html  backend__MPI__tests_8c.html  backend__cpu_8h.html  backend__cpu_8h_source.html  backend__cuda_8h.html  backend__cuda_8h_source.html  backend__hw_8h.html  backend__hw_8h_source.html  backend__mpi_8h.html  backend__mpi_8h_source.html  backend__mpi__MPI__tests_8c.html  backend__mpi__tests_8c.html  bindings.html  bucket_8h.html  bucket_8h_source.html  bucket__MPI__tests_8c.html  bucket__idxlist__elements__tests_8c.html  bucket__idxlist__procs__tests_8c.html  check_8h.html  check_8h_source.html  classes.html  dir_025c2f2342194234ae858f7ec0e04c88.html  (+155 more)
.github/workflows/: build.yml
bindings/C++/: CMakeLists.txt  distdir.hpp
bindings/C++/examples/: CMakeLists.txt  example_basic1.cpp  example_basic2.cpp  example_basic3.cpp  example_basic4.cpp  example_basic5.cpp  example_basic6.cpp  example_basic7.cpp  example_basic8.cpp
bindings/Fortran/: distdir_mod.f90
bindings/Fortran/examples/: CMakeLists.txt  example_basic1.f90  example_basic10.f90  example_basic2.f90  example_basic3.f90  example_basic4.f90  example_basic5.f90  example_basic6.f90  example_basic7.f90  example_basic8.f90  example_basic9.f90  example_multi_grid1.f90
bindings/Julia/examples/: example_basic1.jl
bindings/python/: CMakeLists.txt  distdir.pyx  pydistdir.pyx  setup.py.in  test.py
bindings/python/examples/: example_advance1.py  example_basic0.py  example_basic1.py  example_basic2.py  example_basic3.py  example_basic4.py  example_basic5.py  example_basic6.py  example_basic7.py  example_basic_1d_1.py  example_multi_grid1.py
cmake/: FetchCMocka.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/src/: 1_license.dox  2_rationale.dox  3_installation.dox  4_start.dox  5_advance.dox  6_bindings.dox  7_limit.dox  8_wip.dox  mainpage.dox
examples/: CMakeLists.txt  example_basic1.c  example_basic10.c  example_basic11.c  example_basic2.c  example_basic3  example_basic3.c  example_basic4.c  example_basic5.c  example_basic6.c  example_basic7.c  example_basic8.c  example_basic9.c  example_multi_grid1.c  main.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+76 more)
src/: CMakeLists.txt  backend.c  backend.h  backend_cpu.c  backend_cpu.h  backend_cuda.cu  backend_cuda.h  backend_mpi.c  backend_mpi.h  bucket.c  bucket.h  check.c  check.h  distdir.h  exchange.c  exchange.h  group.c  group.h  idxlist.c  idxlist.h  map.c  map.h  mergesort.c  mergesort.h  quicksort.c  quicksort.h  setting.c  setting.h
src/core/algorithm/: bucket.c  bucket.h  map.c  map.h
src/core/algorithm/backend/: backend.c  backend.h
src/core/exchange/: exchange.c  exchange.h
src/core/exchange/backend_communication/: backend_mpi.c  backend_mpi.h
src/core/exchange/backend_hardware/: backend_cpu.c  backend_cpu.h  backend_cuda.cu  backend_cuda.h  backend_hw.h
src/core/indices/: idxlist.c
src/setup/: group.c  setting.c  setting.h
src/sort/: mergesort.c  quicksort.c  quicksort.h  timsort.c  timsort.h
src/utils/: check.c  distdir_f2c.c  timer.c  timer.h
tests/: CMakeLists.txt  assign_idxlist_elements_to_buckets_tests.c  backend_MPI_tests.c  hello_world.c  hello_world_tests.c  idxlist_tests.c  main.c  num_procs_send_to_each_bucket_tests.c  senders_to_bucket_tests.c
tests/core/algorithm/: bucket_MPI_tests.c  map_MPI_tests.c  map_RD_decomp_to_idxlist_tests.c  map_idxlist_to_RD_decomp_tests.c  map_tests.c
tests/core/algorithm/backend/: backend_MPI_tests.c  bucket_idxlist_elements_tests.c  bucket_idxlist_procs_tests.c  num_indices_to_bucket_from_each_rank_tests.c  num_indices_to_send_to_each_bucket_tests.c  num_procs_send_to_each_bucket_tests.c  senders_to_bucket_tests.c
tests/core/exchange/: exchange_MPI_tests.c  exchange_tests.c
tests/core/exchange/backend_communication/: backend_mpi_MPI_tests.c  backend_mpi_tests.c
tests/core/exchange/backend_hardware/: allocate_cpu_tests.c  packing_cpu_tests.c  unpacking_cpu_tests.c
tests/core/indices/: idxlist_tests.c
tests/setup/: group_MPI_tests.c  group_tests.c  setting_MPI_tests.c  setting_tests.c
tests/sort/: sorting_tests.c
